tests/fixtures/csend.rb
# @typedruby
def test_csend(~String x) => nil
  x&.length
  "hi"&.length
  x&.length + 1
  nil
end
